syntax = "proto3";

package wallet;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./grpc/wallet";

// Wallet definition
message Wallet {
  string id = 1;
  string user_id = 2;
  float balance = 3;
  repeated History history = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  string CreatedBy = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
  string UpdatedBy = 8;
}

// Wallet History definition
message History {
  string id = 1;
  string wallet_id = 2;
  float previous_balance = 3;
  float current_balance = 4;
  string transaction_type = 5;
  google.protobuf.Timestamp created_at = 6;
  string created_by = 7;
}

// WalletList definition
message WalletList {
  repeated Wallet Wallets = 1;
}

// WalletService definition
service WalletService {
  rpc GetWallet(Wallet) returns (Wallet);
  rpc CreateWallet(Wallet) returns (Wallet);
  rpc UpdateWallet(Wallet) returns (Wallet);
  rpc DeleteWallet(Wallet) returns (google.protobuf.Empty);
  rpc GetWallets(Wallet) returns (WalletList);
}
